--- a/MenuExemples/MenuExemples.csproj
+++ b/MenuExemples/MenuExemples.csproj
@@ -165,18 +165,20 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
-    <Content Include="CSS\RadioButton.css" />
-    <Content Include="CSS\Menu1.css" />
-    <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Resources\CSS\RadioButton.css" />
+    <Content Include="Resources\CSS\Menu1.css" />
+    <Content Include="Resources\Fonts\glyphicons-halflings-regular.svg" />
     <Content Include="packages.config" />
-    <Content Include="fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Resources\Fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Resources\Fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Resources\Fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Account\Web.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Pages\Radiobuttons.aspx" />
     <Content Include="Pages\Menu1.html" />
     <Content Include="Pages\TreeView1.aspx" />
+    <Content Include="Resources\Images\csscheckbox_d1.png" />
+    <Content Include="Resources\Images\csscheckbox_d2.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -347,7 +349,7 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
-    <Content Include="CSS\TreeView1.css" />
+    <Content Include="Resources\CSS\TreeView1.css" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
