--- a/MenuExemples/MenuExemples.csproj
+++ b/MenuExemples/MenuExemples.csproj
@@ -151,8 +151,10 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Pages\Checkbox.aspx" />
+    <Content Include="Pages\Gallery.aspx" />
     <Content Include="Pages\Login.aspx" />
     <Content Include="Resources\CSS\Checkbox.css" />
+    <Content Include="Resources\CSS\Gallery.css" />
     <Content Include="Resources\CSS\RadioButton.css" />
     <Content Include="Resources\CSS\Menu1.css" />
     <Content Include="Resources\CSS\TextboxLogin.css" />
@@ -252,6 +254,13 @@
     </Compile>
     <Compile Include="Pages\Checkbox.aspx.designer.cs">
       <DependentUpon>Checkbox.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\Gallery.aspx.cs">
+      <DependentUpon>Gallery.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\Gallery.aspx.designer.cs">
+      <DependentUpon>Gallery.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
